Students Section Done

--- a/index.html
+++ b/index.html
@@ -276,6 +276,58 @@
         </section>
         <!-- Registration Section end -->
 
+        <!-- our students Start-->
+        <section class="our-students container my-5">
+            <div>
+                <h1>Meet Our Successfull 
+                    Students</h1>
+                    <br>
+                <p>It is a long established fact that a reader will be distracted by the <br>
+                        readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="row g-5 my-3">
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5>Awlad Hossain</h5>
+                          <p>Nishi Akter</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5>Jannatul Islam</h5>
+                          <p>Motion Design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5>Imran Hossain</h5>
+                          <p>Graphic Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5>Nishi Akter</h5>
+                          <p>Nishi Akter</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-5">
+                <div class="btn btn-primary fw-bold">View More</div>
+            </div>
+        </section>
+        <!-- our students end -->
     </main>
 
 
