--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- css style External -->
     <link rel="stylesheet" href="style.css">
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/de8ce5e56d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="container">
@@ -328,6 +330,136 @@
             </div>
         </section>
         <!-- our students end -->
+
+        <!-- student feedback section Start -->
+        <section class="std-feedback my-5 container">
+            <div class="text-center">
+                <h1>Some Students Feedback</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="row ">
+                <div class="col-lg-6 col-md-12 col-12 p-3 border rounded">
+                    <div class="d-flex justify-content-between align-items-center my-3">
+                        <div>
+                            <img src="images/comma.png" alt="">
+                        </div>
+                        <div class="icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <p>I've enjoyed the course so far. I love seeing lecturers who are really enthusiastic about their subject, even when it seems niche to the rest of us. Moving to in person lectures has been done well this year, as generally every lecture is delivered in person as well as streamed online and recorded so 10/10 for that</p>
+                    </div>
+                    <div class="d-flex ">
+                        <div>
+                            <img class="img-fluid mt-2" src="images/student/student-5.png" alt="">
+                        </div>
+                        <div class="mx-3">
+                            <h5>Awlad Hossain</h5>
+                            <p>UI/UX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-12 p-3 border rounded ">
+                    <div class="d-flex justify-content-between align-items-center my-3">
+                        <div>
+                            <img src="images/comma.png" alt="">
+                        </div>
+                        <div class="icon">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <p>I've enjoyed the course so far. I love seeing lecturers who are really enthusiastic about their subject, even when it seems niche to the rest of us. Moving to in person lectures has been done well this year, as generally every lecture is delivered in person as well as streamed online and recorded so 10/10 for that</p>
+                    </div>
+                    <div class="d-flex ">
+                        <div>
+                            <img class="img-fluid mt-2" src="images/student/student-6.png" alt="">
+                        </div>
+                        <div class="mx-3">
+                            <h5>Shanta Akter</h5>
+                            <p>Graphics Designer</p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+        <!-- student feedback section end -->
+
+        <!-- question section start  -->
+        <section class="question container my-5">
+            <div class="text-center">
+                <h1>Frequently Asked Questions</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="d-flex justify-content-center mt-3">
+                <div class="w-75 text-center">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <strong> Difference Between Flex VS Grid</strong>  
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Grid and flexbox. The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              <strong>Difference Between Bootstrap VS TailwindCSS</strong>
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Bootstrap is much larger than Tailwind and requires multiple files to access its full functionality. Because of this, using Bootstrap means a significantly larger file size than Tailwind. Bootstrap also offers mobile-first, responsive components pre-styled to create flawless website pages quickly.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <strong> What is box model in CSS?</strong>
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                               
+                                The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                <strong>What are Semantic Elements?</strong>
+                              </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                Semantic HTML elements are those that clearly describe their meaning in a human- and machine-readable way. Elements such as <header> , <footer> and <article> are all considered semantic because they accurately describe the purpose of the element and the type of content that is inside them.
+                              </div>
+                            </div>
+                          </div>
+                      </div>
+                </div>
+            </div>
+        </section>
+        <!-- question section end  -->
     </main>
 
 
