--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Courses</a>
+                        <a class="nav-link" href="#1">Courses</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Deals</a>
+                        <a class="nav-link" href="#2">Deals</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#3">About</a>
                       </li>
                       
                     </ul>
-                    <div class="btn btn-primary bg-white text-primary fw-bolder">Registration</div>
+                    <div class="btn btn-primary bg-white text-primary fw-bolder" >Registration</div>
                   </div>
                 </div>
               </nav>
@@ -46,7 +46,7 @@
 
         <!-- carousel section start  -->
         <section class="carousel-my-class my-5">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="false">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -54,7 +54,15 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block text-dark">
+                      <h5>Get Started Digital Learning</h5>
+                      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                      <div class="btn btn-primary">Get Started</div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active">
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="...">
                     <div class="carousel-caption d-none d-md-block ">
                       <h5>Get Started Digital Learning</h5>
                       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -62,15 +70,7 @@
                     </div>
                   </div>
                   <div class="carousel-item active">
-                    <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block ">
-                      <h5>Get Started Digital Learning</h5>
-                      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                      <div class="btn btn-primary">Get Started</div>
-                    </div>
-                  </div>
-                  <div class="carousel-item active">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
                     <div class="carousel-caption d-none d-md-block ">
                       <h5>Get Started Digital Learning</h5>
                       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -94,7 +94,7 @@
 
     <main>
         <!-- our courses start  -->
-        <section class="our-courses my-5 container">
+        <section class="our-courses my-5 container" id="1">
             <div class="text-center my-5">
                 <h1>Discover Our Popular Courses</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
@@ -241,7 +241,7 @@
         <!-- explore institution end -->
 
         <!-- Registration Section Start  -->
-        <section class="registration-section container my-5 bg-primary text-white rounded">
+        <section class="registration-section container my-5 bg-primary text-white rounded" id="4">
             <div class="row d-flex p-5 justify-content-around align-items-center">
                 <div class="col-lg-6 col-12">
                     <h1>Ready to join?</h1>
@@ -460,7 +460,43 @@
             </div>
         </section>
         <!-- question section end  -->
+
+        <!-- companies start  -->
+        <section class="companies my-5 container">
+            <h1 class="text-center">Trusted by over 800+ companies</h1>
+            <div class="mt-5">
+                <div class="row flex justify-content-center align-items-center">
+                    <div class="col-lg-2  p-2"><img src="images/company/company-1.png" alt=""></div>
+                    <div class="col-lg-2 p-2"><img src="images/company/company-2.png" alt=""></div>
+                    <div class="col-lg-2 p-2"><img src="images/company/company-3.png" alt=""></div>
+                    <div class="col-lg-2 col-0 p-2"><img src="images/company/company-4.png" alt=""></div>
+                    <div class="col-lg-2 p-2"><img src="images/company/company-5.png" alt=""></div>
+                    <div class="col-lg-2 col-0 p-2"><img src="images/company/company-6.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+        <!-- companies end -->
     </main>
+    <footer class="bg-dark text-white" style="height: 300px;">
+        <section class="d-flex justify-content-center align-items-center pt-5" >
+            <div class="text-center">
+                <h1>Tech Learners BD</h1>
+                <h6>Office 41, Zawaya Buildin, Ghala Muscat, 
+                    <br>
+                    Sultanate of Oman</h6>
+                <h6>Privacy Ploicy | Terms of use</h6>
+                <div class="d-flex icons">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-sharp fa-solid fa-envelope"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-line"></i>
+                </div>
+            </div>
+           
+        </section>
+        <p class="text-center mt-3">ⒸCopyright Form Asif2k20</p>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
