--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         <!-- carousel section start  -->
         <section class="carousel-my-class my-5">
             <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="false">
-                <div class="carousel-indicators">
+                <div class="carousel-indicators" >
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block text-dark">
+                    <img  src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption carousel-text-bg">
                       <h5>Get Started Digital Learning</h5>
                       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                       <div class="btn btn-primary">Get Started</div>
@@ -63,7 +63,7 @@
                   </div>
                   <div class="carousel-item active">
                     <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block ">
+                    <div class="carousel-caption  carousel-text-bg">
                       <h5>Get Started Digital Learning</h5>
                       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                       <div class="btn btn-primary">Get Started</div>
@@ -71,7 +71,7 @@
                   </div>
                   <div class="carousel-item active">
                     <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block ">
+                    <div class="carousel-caption  carousel-text-bg">
                       <h5>Get Started Digital Learning</h5>
                       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                       <div class="btn btn-primary">Get Started</div>
@@ -109,8 +109,7 @@
                             </div>
                             <div class="col-lg-8 col-md-8 col-12 mt-3">
                                 <h4>Fundamental Of UI/UX Design</h4>
-                                <p>Some quick example text to build on the card title 
-                                    and make up the bulk of the card</p>
+                                <p>The five main principles of UX design. There are many important principles within UX design but to simplify things</p>
                                 <h5 class="fw-bold text-primary">Price : 20$</h5>
                             </div>
                         </div>
@@ -123,10 +122,9 @@
                                 <img class="img-fluid w-100" src="images/course/course-2.png" alt="">
                             </div>
                             <div class="col-lg-8 col-md-8 col-12 mt-3">
-                                <h4>Fundamental Of UI/UX Design</h4>
-                                <p>Some quick example text to build on the card title 
-                                    and make up the bulk of the card</p>
-                                <h5 class="fw-bold text-primary">Price : 20$</h5>
+                                <h4>Javascript Basic to advanced</h4>
+                                <p>A perfect JavaScript course for all those who want to learn and master JavaScript programming skills right from scratch.</p>
+                                <h5 class="fw-bold text-primary">Price : 10$</h5>
                             </div>
                         </div>
                     </div>
@@ -138,10 +136,9 @@
                                 <img class="img-fluid w-100" src="images/course/course-3.png" alt="">
                             </div>
                             <div class="col-lg-8 col-md-8 col-12 mt-3">
-                                <h4>Fundamental Of UI/UX Design</h4>
-                                <p>Some quick example text to build on the card title 
-                                    and make up the bulk of the card</p>
-                                <h5 class="fw-bold text-primary">Price : 20$</h5>
+                                <h4>Fullstack Web Development</h4>
+                                <p>A full stack web developer is a person who can develop both client and server software. In addition to mastering HTML and CSS,</p>
+                                <h5 class="fw-bold text-primary">Price : 80$</h5>
                             </div>
                         </div>
                     </div>
@@ -153,10 +150,9 @@
                                 <img class="img-fluid w-100" src="images/course/course-4.png" alt="">
                             </div>
                             <div class="col-lg-8 col-md-8 col-12 mt-3">
-                                <h4>Fundamental Of UI/UX Design</h4>
-                                <p>Some quick example text to build on the card title 
-                                    and make up the bulk of the card</p>
-                                <h5 class="fw-bold text-primary">Price : 20$</h5>
+                                <h4>Digital Marketing</h4>
+                                <p>Digital marketing, also called online marketing, is the promotion of brands to connect with potential customers </p>
+                                <h5 class="fw-bold text-primary">Price : 50$</h5>
                             </div>
                         </div>
                     </div>
@@ -168,10 +164,9 @@
                                 <img class="img-fluid w-100" src="images/course/course-5.png" alt="">
                             </div>
                             <div class="col-lg-8 col-md-8 col-12 mt-3">
-                                <h4>Fundamental Of UI/UX Design</h4>
-                                <p>Some quick example text to build on the card title 
-                                    and make up the bulk of the card</p>
-                                <h5 class="fw-bold text-primary">Price : 20$</h5>
+                                <h4>Photography Basic Rules</h4>
+                                <p>There are seven basic elements of photographic art: line, shape, form, texture, color, size, and depth.</p>
+                                <h5 class="fw-bold text-primary">Price : 40$</h5>
                             </div>
                         </div>
                     </div>
@@ -183,10 +178,9 @@
                                 <img class="img-fluid w-100" src="images/course/course-6.png" alt="">
                             </div>
                             <div class="col-lg-8 col-md-8 col-12 mt-3">
-                                <h4>Fundamental Of UI/UX Design</h4>
-                                <p>Some quick example text to build on the card title 
-                                    and make up the bulk of the card</p>
-                                <h5 class="fw-bold text-primary">Price : 20$</h5>
+                                <h4>Motion Graphics</h4>
+                                <p>Motion graphics (sometimes mograph) are pieces of animation or digital footage which create the illusion of motion or rotation</p>
+                                <h5 class="fw-bold text-primary">Price : 30$</h5>
                             </div>
                         </div>
                     </div>
